# Portal

./: .gitignore  README.md  kiri_3dgs.py
portal/: .env.example  .gitignore  CITATION.cff  LICENSE  THIRD_PARTY.md  environment.yml  pyproject.toml  requirements.txt
portal-fe/: .gitignore  README.md  global.d.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
portal-fe/app/: globals.css  layout.tsx  page.tsx
portal-fe/components/: Footer.tsx  Gaussians.tsx  Hero.tsx  KiriCompare.tsx  Nav.tsx  Pipeline.tsx  Reveal.tsx  Specs.tsx  SplatViewer.tsx  Term.tsx  UseCases.tsx
portal-fe/scripts/: build_media.sh
portal/api/: main.py  requirements.txt  runpod_client.py  storage.py
portal/eval/: README.md
portal/infra/: docker-compose.dev.yaml
portal/portal/: __init__.py  __main__.py  _run.py  config.py  export.py  frames.py  pipeline.py  quality.py  sfm.py  train.py
portal/scripts/: export_ply.py  keyframe_select.py  package.json  ply2ksplat.mjs
portal/web/: README.md
portal/worker/: Dockerfile  handler.py  requirements.txt  storage.py  test_input.json
scripts/: ply2ksplat.mjs
